--- a/styles/styles.css
+++ b/styles/styles.css
@@ -447,7 +447,7 @@ section {
 }
 
 .carousel {
-  width: 80%;
+  width: 90%;
   border-radius: 50px;
   margin: 0 auto;
   overflow: hidden;
@@ -540,6 +540,7 @@ section {
 
 .timeline .timeline-item {
   position: relative;
+  height: 15rem;
   padding-left: 3rem;
   padding-bottom: 1rem;
 }
@@ -586,6 +587,7 @@ section {
 
 .timeline .timeline-item p {
   color: var(--color-grey-2);
+  height: 7rem;
   padding: 0.5em;
   font-size: x-small;
   line-height: 1.1rem;
@@ -599,12 +601,10 @@ section {
 /* EDU IMAGE KOKO JA EFEKTIT MOUSE-OVER */
 .timeline .timeline-item img {
   width: 100%;
-  height: auto;
+  height: 33%;
   object-fit: cover;
   border-top-left-radius: 50px;
   border-top-right-radius: 50px;
-  border-bottom-left-radius: 50px;
-  border-bottom-right-radius: 50px;
   transition: transform 0.5s ease-in-out;
   border-bottom: 0.4rem solid var(--color-secondary);
 }
@@ -642,8 +642,8 @@ section {
 
 .portfolios {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-gap: 0.8rem;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 1.5rem;
   margin-top: 2rem;
 }
 
@@ -660,8 +660,7 @@ section {
   height: 8rem;
   object-fit: cover;
   border-top-left-radius: 50px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-top-right-radius: 50px;
   border-bottom: var(--color-secondary)solid 0.4rem;
 }
 
@@ -673,8 +672,7 @@ section {
   left: 0;
   top: 0;
   border-top-left-radius: 50px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-top-right-radius: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -727,7 +725,6 @@ section {
 }
 
 
-
 .blogs {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -738,6 +735,8 @@ section {
 
 
 .blogs .blog {
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
   position: relative;
   background-color: var(--color-grey-5);
   border-bottom-left-radius: 5px;
@@ -747,6 +746,7 @@ section {
 }
 
 .blogs .blog:hover {
+  background-color: #000000;
   box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.3);
   transform: translateY(-5px);
   transition: all 0.4s ease-in-out;
@@ -763,15 +763,19 @@ section {
   height: 7rem;
   object-fit: cover;
   border-top-left-radius: 50px;
-  border-top-right-radius: 5px;
+  border-top-right-radius: 50px;
   filter: grayscale(0%);
   transition: all 0.4s ease-in-out;
 }
 
+.blog-text {
+  background-color: #000000;
+}
+
 .blogs .blog .blog-text {
+  background-color: #000000;
   margin-top: -7px;
   padding: 1.1rem;
-  border-top-left-radius: 50px;
   border-top: 0.5rem solid var(--color-secondary);
   height: 8rem;
 }
